[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/UI/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Temp/Untitled.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Minecraft.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 58
font_data = ExtResource( 4 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.14167, 2.22593 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -302.0
margin_right = 509.0
margin_bottom = 302.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1021.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 281.0
margin_top = 120.0
margin_right = 740.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 1 )
text = "Project Charley"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 304.0
margin_right = 1021.0
margin_bottom = 604.0
rect_min_size = Vector2( 0, 300 )
alignment = 1

[node name="Start" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 84.0
margin_right = 1021.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 30 )
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Settings")
text = "Start"
arrow_margin_from_center = 70

[node name="Settings" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 118.0
margin_right = 1021.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 30 )
focus_neighbour_top = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Credits")
text = "Settings"
arrow_margin_from_center = 70

[node name="Credits" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 152.0
margin_right = 1021.0
margin_bottom = 182.0
rect_min_size = Vector2( 0, 30 )
focus_neighbour_top = NodePath("../Settings")
focus_neighbour_bottom = NodePath("../Quit")
text = "Credits"
arrow_margin_from_center = 70

[node name="Quit" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 186.0
margin_right = 1021.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 30 )
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../Start")
text = "Quit"
arrow_margin_from_center = 70

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
